tests/purs/passing/ImplicitEmptyImport.purs
module Main where

import Prelude
import Effect.Console (log)

main = do
  log "Hello"
  log "Goodbye"
  log "Done"
