tests/purs/failing/QualifierUnderscoreEnd.purs
-- @shouldFailWith ErrorParsingModule
module QualifierEndsWithUnderscore_.OkModuleName where

import Effect.Console (log)

main = log "Done"
